---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : 1.0 .. 1"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of range of `real` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:9..17: mismatched types
| note for src/main.t:9..17: bounds are of type `real`
| error for src/main.t:9..17: `real` is not an index type
| info: an index type is an integer, a `boolean`, a `char`, an enumerated type, or a range of those types
